# ffmpeg

./: README.md
Classes/: CCMovieNode.cpp  CCMovieNode.h
others/ffmpeg/: CMakeLists.txt
others/ffmpeg/cplusplus/: av.mk  config.fate  config.mak  ffmpeg.c  ffserver.c
others/ffmpeg/cplusplus/doc/: config.texi
others/ffmpeg/cplusplus/doc/examples/pc-uninstalled/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
others/ffmpeg/cplusplus/libavcodec/: Makefile  config.mak  jacosubdec.c  libavcodec.pc
others/ffmpeg/cplusplus/libavdevice/: fbdev_dec.c  libavdevice.pc  v4l.c  x11grab.c
others/ffmpeg/cplusplus/libavfilter/: libavfilter.pc  vf_drawtext.c
others/ffmpeg/cplusplus/libavformat/: Makefile  avformat.h  dv.c  dvenc.c  libavformat.pc  mxfenc.c  rtpproto.c  sbgdec.c
others/ffmpeg/cplusplus/libavutil/: Makefile  bprint.c  libavutil.pc  parseutils.c  random_seed.c  time.c  time.h
others/ffmpeg/cplusplus/libswresample/: libswresample.pc
others/ffmpeg/cplusplus/libswscale/: Makefile  libswscale.pc
others/ffmpeg/project.android/: Android.mk
others/ffmpeg/project.ios_mac/: config.h
others/ffmpeg/project.win32/include/: inttypes.h
others/lightwf/: CMakeLists.txt
others/lightwf/cplusplus/cocos2dx/: lwf_cocos2dx_bitmap.cpp  lwf_cocos2dx_bitmap.h  lwf_cocos2dx_factory.cpp  lwf_cocos2dx_factory.h  lwf_cocos2dx_node.cpp  lwf_cocos2dx_node.h  lwf_cocos2dx_particle.cpp  lwf_cocos2dx_particle.h  lwf_cocos2dx_resourcecache.cpp  lwf_cocos2dx_resourcecache.h  lwf_cocos2dx_textbmfont.cpp  lwf_cocos2dx_textbmfont.h  lwf_cocos2dx_textttf.cpp  lwf_cocos2dx_textttf.h
others/lightwf/cplusplus/core/: lwf_animation.cpp  lwf_animation.h  lwf_bitmap.cpp  lwf_bitmap.h  lwf_bitmapex.cpp  lwf_bitmapex.h  lwf_button.cpp  lwf_button.h  lwf_core.cpp  lwf_core.h  lwf_coredata.cpp  lwf_data.cpp  lwf_data.h  lwf_event.cpp  lwf_eventbutton.cpp  lwf_eventbutton.h  lwf_eventmovie.cpp  lwf_eventmovie.h  lwf_format.cpp  lwf_format.h  lwf_graphic.cpp  lwf_graphic.h  lwf_input.cpp  lwf_iobject.cpp  lwf_iobject.h  lwf_lwfcontainer.cpp  lwf_lwfcontainer.h  lwf_movie.cpp  lwf_movie.h  lwf_movieat.cpp  lwf_movieop.cpp  lwf_movieprop.cpp  lwf_object.cpp  lwf_object.h  lwf_particle.cpp  lwf_particle.h  lwf_programobj.cpp  lwf_programobj.h  lwf_property.cpp  lwf_property.h  (+6 more)
others/lightwf/project.android/: Android.mk
others/lightwf/project.ios_mac/lwf.xcodeproj/: project.pbxproj
others/lightwf/project.win32/: ReadMe.txt  liblwf.vcxproj  liblwf.vcxproj.filters
others/lightwf/project.win32/Debug.win32/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  cl.command.1.tlog  vc110.idb
others/protobuf/: CMakeLists.txt
others/protobuf/project.android/: Android.mk
others/protobuf/project.win32/: libprotobuf.vcproj  libprotobuf.vcxproj  libprotobuf.vcxproj.filters
others/protobuf/project.win32/Debug.win32/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  vc110.idb
others/sqlite3/: CMakeLists.txt
others/sqlite3/project.android/: Android.mk
others/sqlite3/project.win32/: liblwf.vcxproj
others/sqlite3/project.win32/Debug.win32/: Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  liblightwf.lastbuildstate  vc110.idb
others/sqlite3/project.win32/libsqlite3/: ReadMe.txt  libsqlite3.vcxproj  libsqlite3.vcxproj.filters
others/sqlite3/project.win32/libsqlite3/Debug/: CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  vc110.idb
others/sqlite3/project.win32/libsqlite3/Debug.win32/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog  vc110.idb
proj.android/: .project  AndroidManifest.xml  build.xml
proj.android/res/values/: strings.xml
proj.ios_mac/MyWhiteWings.xcodeproj/: project.pbxproj
proj.ios_mac/ios/: main.m
proj.win32/: MyWhiteWings.sln  MyWhiteWings.vcxproj  game.rc
